--- a/.classpath
+++ b/.classpath
@@ -32,5 +32,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/HiTECH-PC/Downloads/maven-project-info-reports-plugin-3.0.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
