--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
+
+
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<repositories>
@@ -78,6 +81,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-project-info-reports-plugin</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.skins</groupId>
+			<artifactId>maven-default-skin</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-site-plugin</artifactId>
+			<version>3.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-jxr-plugin</artifactId>
 			<version>3.0.0</version>
 		</dependency>
@@ -88,12 +106,36 @@
 		</dependency>
 	</dependencies>
 	<build>
+	<directory>${basedir}/target</directory>
 		<pluginManagement>
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-report-plugin</artifactId>
+					<version>3.0.0-M4</version>
+					<configuration>
+						<linkXRef>false</linkXRef>
+						<showSuccess>true</showSuccess>
+					</configuration>
+					<executions>
+						<execution>
+							<id>generate-test-report</id>
+							<phase>test</phase>
+							<goals>
+								<goal>report</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.0.0-M4</version>
+					<configuration>
+						<testFailureIgnore>true</testFailureIgnore>
+						<testSourceDirectory>src/test/java</testSourceDirectory>
+						<printSummary>true</printSummary>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -109,13 +151,59 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+		<plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.9.0</version>
+        <configuration>
+          <port>9000</port>
+          <tempWebappDirectory>${basedir}/site</tempWebappDirectory>
+          <siteDirectory>${basedir}/site</siteDirectory>
+          <generateProjectInfo>false</generateProjectInfo>
+          <generateReports>false</generateReports>
+          <generateSitemap>false</generateSitemap>
+          <skip>false</skip>
+        </configuration>
+      </plugin>
+    </plugins>
 	</build>
 	<reporting>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>3.0.0-M4</version>
+				<configuration>
+					<outputDirectory>/CursoSelenium/target/site</outputDirectory>
+					<reportsDirectories>
+						<reportsDirectories>/CursoSelenium/target/site/surefire-reports</reportsDirectories>
+					</reportsDirectories>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>report-only</report>
+							<report>dependencies</report>
+							<report>project-team</report>
+							<report>mailing-list</report>
+							<report>cim</report>
+							<report>issue-tracking</report>
+							<report>license</report>
+							<report>scm</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.3</version>
+				<version>2.5</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>3.0</version>
 			</plugin>
 		</plugins>
 	</reporting>
