--- a/pom.xml
+++ b/pom.xml
@@ -175,9 +175,9 @@
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>3.0.0-M4</version>
 				<configuration>
-					<outputDirectory>/CursoSelenium/target/site</outputDirectory>
+					<outputDirectory>${basedir}/site</outputDirectory>
 					<reportsDirectories>
-						<reportsDirectories>/CursoSelenium/target/site/surefire-reports</reportsDirectories>
+						<reportsDirectories>${basedir}/site/surefire-reports</reportsDirectories>
 					</reportsDirectories>
 				</configuration>
 				<reportSets>
@@ -198,12 +198,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.5</version>
+				<version>3.0.0</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
-				<version>3.0</version>
+				<version>3.0.0</version>
 			</plugin>
 		</plugins>
 	</reporting>
